--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -12,6 +12,38 @@
 	min-width:100%;
 }
 
+.headers{
+	margin-top:10vh;
+	margin-left:10vw;
+}
+
+.header{
+	display:inline;
+	margin-left:10vw;
+	margin-right:10vw;
+}
+
+#About{
+	margin-left:0;
+}
+
+#Images:hover ~ hr{
+	margin-left:29%;
+}
+#Reservations:hover ~ hr{
+	margin-left:62%;
+}
+
+hr{;
+	height: 0.5rem;
+	width:23%;
+	background:#320B00;
+	margin:0;
+	margin-top:1vh;
+	border:none;
+	transition:.3s ease-in-out;
+}
+
 .info{
 	max-width:30vw;
 	height:20vh;
