--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,5 +1,5 @@
 .content{
-	margin-top:20vh;
+	margin-top:15vh;
 	margin-bottom:30vh;
 	display:none;
 }
@@ -46,6 +46,26 @@
 	margin-left:62%;
 }
 
+.slideshow{
+	width:70%;
+	margin:0 auto;
+}
+
+#slideshow-box{
+	margin: 0 auto;
+	overflow: scroll;
+	height:85vh;
+}
+
+.slide-buttons{
+	width:30vw;
+}
+
+.slide-buttons:hover{
+	opacity:0.8;
+	transition:0.5s;
+}
+
 hr{;
 	height: 0.5rem;
 	width:23%;
@@ -75,4 +95,9 @@ h1{
 	color: #000000 !important;
 	position:relative;
 	z-index: 2;
+}
+
+p{
+	margin-left:10vw;
+	margin-right:10vw;
 }
